[fix] Ajustes nas correções de namespaces automaticas

--- a/src/Cpnucleo.Blazor/_Imports.razor
+++ b/src/Cpnucleo.Blazor/_Imports.razor
@@ -9,5 +9,5 @@
 @using Cpnucleo.Blazor
 @using Cpnucleo.Blazor.Shared
 
-@using Cpnucleo.Infra.CrossCutting.Shared.Common.DTOs
+@using Cpnucleo.Shared.Common.DTOs
 @using Cpnucleo.Blazor.Services.Interfaces
