--- a/src/Cpnucleo.MVC/Views/Shared/_CardApontamentoPartial.cshtml
+++ b/src/Cpnucleo.MVC/Views/Shared/_CardApontamentoPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model             TarefaDTO
+﻿@model Cpnucleo.Shared.Common.DTOs.TarefaDTO
 
 <li class="@Model.TipoTarefa.Element" data-toggle="modal" data-target="#modal-apontamento"
     data-nome-tarefa="@Model.Nome" data-id-tarefa="@Model.Id" data-id-recurso="@Model.IdRecurso">
