--- a/src/Cpnucleo.RazorPages/Pages/Shared/_CardApontamentoFinalizadoPartial.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Shared/_CardApontamentoFinalizadoPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model             TarefaDTO
+﻿@model Cpnucleo.Shared.Common.DTOs.TarefaDTO
 
 <li class="@Model.TipoTarefa.Element">
     @Model.Nome
