--- a/src/Cpnucleo.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
             </div>
             <div class="footer">
                 <div>
-                    <strong>Copyright</strong> &copy; 2016 - @DateTime.Now.Year <a href="http://jonathanperis.github.io" target="_blank">Jonathan Peris</a>, todos os direitos Reservados.
+                    <strong>Copyright</strong> &copy; 2016 - @DateTime.UtcNow.Year <a href="http://jonathanperis.github.io" target="_blank">Jonathan Peris</a>, todos os direitos Reservados.
                 </div>
             </div>
         </div>
