--- a/src/WebClient/Components/Pages/Weather.razor
+++ b/src/WebClient/Components/Pages/Weather.razor
@@ -1,117 +1,183 @@
 ﻿@page "/weather"
-@rendermode InteractiveServer
+@inject ISnackbar Snackbar
+@inject IDialogService DialogService
 
 <PageTitle>Weather</PageTitle>
 
-<RadzenBreadCrumb>
-    <RadzenBreadCrumbItem Path="/" Icon="home"/>
-    <RadzenBreadCrumbItem Path="/weather" Text="Weather"/>
-</RadzenBreadCrumb>
+<MudCard Class="pa-0 ma-4" Elevation="1">
+    <MudBreadcrumbs Items="_items">
+        <SeparatorTemplate>
+            <MudIcon Icon="@Icons.Material.Filled.ArrowForward" Size="Size.Small"/>
+        </SeparatorTemplate>
+    </MudBreadcrumbs>
+</MudCard>
 
-<h1>Weather</h1>
+<MudButton StartIcon="@Icons.Material.Filled.Add" Color="Color.Success" Class="add-item-btn pa-2 ma-0 ml-4" OnClick="@AddItem">Add Item</MudButton>
+<MudButton StartIcon="@Icons.Material.Filled.Delete" Color="Color.Error" Class="remove-item-btn pa-2 ma-0 ml-4" OnClick="@RemoveItem">Remove Item</MudButton>
 
-<p>This component demonstrates showing data.</p>
-
-@if (forecasts == null)
-{
-    <RadzenProgressBar ProgressBarStyle="ProgressBarStyle.Info" Value="100" ShowValue="false" Mode="ProgressBarMode.Indeterminate"/>
-}
-else
-{
-    @* <RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="false" *@
-    @*                 FilterMode="FilterMode.Advanced" AllowSorting="true" PageSize="5" AllowPaging="true" *@
-    @*                 PagerHorizontalAlign="HorizontalAlign.Left" ShowPagingSummary="true" *@
-    @*                 Data="@forecasts2" ColumnWidth="300px" LogicalFilterOperator="LogicalFilterOperator.Or" *@
-    @*                 SelectionMode="DataGridSelectionMode.Single" @bind-Value=@selectedForecasts2> *@
-    @*     <Columns> *@
-    @*         <RadzenDataGridColumn Property="@nameof(WeatherForecast.Id)" Title="#" /> *@
-    @*         <RadzenDataGridColumn Property="@nameof(WeatherForecast.Date)" Title="Date" /> *@
-    @*         <RadzenDataGridColumn Property="@nameof(WeatherForecast.TemperatureC)" Title="Temp. (C)" /> *@
-    @*         <RadzenDataGridColumn Property="@nameof(WeatherForecast.TemperatureF)" Title="Temp. (F)" /> *@
-    @*         <RadzenDataGridColumn Property="@nameof(WeatherForecast.Summary)" Title="Summary" /> *@
-    @*     </Columns> *@
-    @* </RadzenDataGrid> *@
-
-    <RadzenDataGrid @ref="grid" IsLoading=@isLoading
-                    Count="@count" Data="@forecasts2"
-                    AllowSorting="true" AllowPaging="true"
-                    PageSize="10" PagerHorizontalAlign="HorizontalAlign.Center">
-        <Columns>
-            <RadzenDataGridColumn Property="@nameof(WeatherForecast.Id)" Title="#" />            
-            <RadzenDataGridColumn Property="@nameof(WeatherForecast.Date)" Title="Date"/>
-            <RadzenDataGridColumn Property="@nameof(WeatherForecast.TemperatureC)" Title="Temp. (C)"/>
-            <RadzenDataGridColumn Property="@nameof(WeatherForecast.TemperatureF)" Title="Temp. (F)"/>
-            <RadzenDataGridColumn Property="@nameof(WeatherForecast.Summary)" Title="Summary"/>
-        </Columns>
-    </RadzenDataGrid>
-}
+<MudDataGrid T="WeatherForecast" MultiSelection Items="@forecasts" SortMode="SortMode.Multiple" Filterable QuickFilter="@_quickFilter"
+             EditMode="DataGridEditMode.Form" Hideable RowClick="@RowClicked" RowContextMenuClick="RowRightClicked" 
+             SelectedItemsChanged="@SelectedItemsChanged" Class="pa-4 ma-4" Virtualize
+             EditTrigger="DataGridEditTrigger.Manual" Loading="_loading" FixedHeader Height="30rem" Elevation="1">
+    <ToolBarContent>
+        <MudText Typo="Typo.h6">Weather</MudText>
+        <MudSpacer/>
+        <MudTextField @bind-Value="_searchString" Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
+                      AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0">
+        </MudTextField>
+    </ToolBarContent>
+    <Columns>
+        <SelectColumn T="WeatherForecast"/>
+        <PropertyColumn Property="x => x.Id" Title="Id" Sortable="false" Filterable="false"/>
+        <PropertyColumn Property="x => x.Date" Title="Date" SortBy="@_sortBy"/>
+        <PropertyColumn Property="x => x.TemperatureC" Title="Temp. (C)"/>
+        <PropertyColumn Property="x => x.TemperatureF" Title="Temp. (F)"/>
+        <PropertyColumn Property="x => x.Summary" Title="Summary"/>
+        <TemplateColumn CellClass="d-flex justify-end">
+            <CellTemplate>
+                <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="() => EditItem(context.Item)" />
+            </CellTemplate>
+        </TemplateColumn>   
+    </Columns>
+    <PagerContent>
+        <MudDataGridPager T="WeatherForecast" PageSizeOptions="new[] {10, 25, 50, 100, 500, 1000, 5000}" />
+    </PagerContent>
+</MudDataGrid>
 
 @code {
-    private WeatherForecast[]? forecasts;
+    private ObservableCollection<WeatherForecast> forecasts = [];
+    private HashSet<WeatherForecast> _selectedItems = [];
+    
+    private string _searchString;
+    private bool _loading;
 
-    RadzenDataGrid<WeatherForecast> grid;
-    int count;
-    bool isLoading = false;
-    IQueryable<WeatherForecast> forecasts2;
-    IList<WeatherForecast> selectedForecasts2;
+    // private int[] _pageSizeOptions = new[] { 10, 25, 50, 100, 500, 1000, forecasts.Count };
+    // custom sort by name
+    private Func<WeatherForecast, object> _sortBy => x => x.Date;
+
+    // quick filter - filter globally across multiple columns with the same input
+    private Func<WeatherForecast, bool> _quickFilter => x =>
+    {
+        if (string.IsNullOrWhiteSpace(_searchString))
+            return true;
+
+        if (x.Date.ToString().Contains(_searchString, StringComparison.OrdinalIgnoreCase))
+            return true;
+
+        if (x.TemperatureC.ToString().Contains(_searchString, StringComparison.OrdinalIgnoreCase))
+            return true;
+
+        if (x.TemperatureF.ToString().Contains(_searchString, StringComparison.OrdinalIgnoreCase))
+            return true;
+
+        if (x.Summary.Contains(_searchString, StringComparison.OrdinalIgnoreCase))
+            return true;
+
+        return false;
+    };
 
     protected override async Task OnInitializedAsync()
     {
-        // Simulate asynchronous loading to demonstrate streaming rendering
-        await Task.Delay(500);
+        _loading = true;
 
-        var startDate = DateOnly.FromDateTime(DateTime.Now);
-        var summaries = new[] { "Freezing", "Bracing", "Chilly", "Cool", "Mild", "Warm", "Balmy", "Hot", "Sweltering", "Scorching" };
-        forecasts = Enumerable.Range(1, 5).Select(index => new WeatherForecast
-        {
-            Id = Guid.NewGuid(),
-            Date = startDate.AddDays(index),
-            TemperatureC = Random.Shared.Next(-20, 55),
-            Summary = summaries[Random.Shared.Next(summaries.Length)]
-        }).ToArray();
-
-        forecasts2 = Enumerable.Range(1, 500).Select(index => new WeatherForecast
-        {
-            Id = Guid.NewGuid(),
-            Date = startDate.AddDays(index),
-            TemperatureC = Random.Shared.Next(-20, 55),
-            Summary = summaries[Random.Shared.Next(summaries.Length)]
-        }).AsQueryable();
+        await Task.Yield();
         
-        // selectedForecasts2 = new List<WeatherForecast>(){ forecasts2.FirstOrDefault() };
+        // Simulate asynchronous loading to demonstrate streaming rendering
+        await Task.Delay(2000);
+
+        var startDate = DateTime.Now;
+        var summaries = new[] { "Freezing", "Bracing", "Chilly", "Cool", "Mild", "Warm", "Balmy", "Hot", "Sweltering", "Scorching" };
+
+        for (var i = 1; i <= 69420; i++)
+        {
+            forecasts.Add(new WeatherForecast
+            {
+                Id = Guid.NewGuid(),
+                Date = startDate.AddDays(i),
+                TemperatureC = Random.Shared.Next(-20, 55),
+                Summary = summaries[Random.Shared.Next(summaries.Length)]
+            });
+        }
+        
+        _loading = false;
     }
 
-    // async Task LoadData(LoadDataArgs args)
-    // {
-    //     isLoading = true;
-    //
-    //     await Task.Yield();
-    //
-    //     // if (!string.IsNullOrEmpty(args.Filter))
-    //     // {
-    //     //     // Filter via the Where method
-    //     //     forecasts2 = forecasts2.Where(grid.ColumnsCollection);
-    //     // }
-    //     //
-    //     // if (!string.IsNullOrEmpty(args.OrderBy))
-    //     // {
-    //     //     // Sort via the OrderBy method
-    //     //     forecasts2 = forecasts2.OrderBy(args.OrderBy);
-    //     // }
-    //
-    //     // Important!!! Make sure the Count property of RadzenDataGrid is set.
-    //     count = forecasts2.Count();
-    //
-    //     // Perform paging via Skip and Take.
-    //     forecasts2 = forecasts2.Skip(args.Skip.Value).Take(args.Top.Value).ToList();
-    //
-    //     isLoading = false;
-    // }
+    // events
+    void RowClicked(DataGridRowClickEventArgs<WeatherForecast> args)
+    {
+        // you can handle single row click events here if needed
+    }
 
-    private class WeatherForecast
+    void RowRightClicked(DataGridRowClickEventArgs<WeatherForecast> args)
+    {
+        // you can handle context menu actions here if needed
+    }
+
+    void SelectedItemsChanged(HashSet<WeatherForecast> items)
+    {
+        _selectedItems = items;
+    }
+    
+    async Task AddItem()
+    {
+        var dialog = await DialogService.ShowAsync<AddWeather>("Add Weather", new DialogOptions { MaxWidth = MaxWidth.Small, FullWidth = true });
+        var result = await dialog.Result;
+
+        if (!result.Canceled)
+        {
+            var item = result.As<WeatherForecast>()!;
+            forecasts.Add(item);
+        }        
+    }
+    
+    async Task EditItem(WeatherForecast item)
+    {
+        var parameters = new DialogParameters<EditWeather> { { x => x.Item, item } };
+
+        var dialog = await DialogService.ShowAsync<EditWeather>("Edit Weather", parameters, new DialogOptions { MaxWidth = MaxWidth.Small, FullWidth = true });
+        var result = await dialog.Result;
+
+        if (!result.Canceled)
+        {
+            var editedItem = result.As<WeatherForecast>()!;
+            var oldItem = forecasts.First(x => x.Id == item.Id);
+            oldItem = editedItem;
+        }
+    }
+
+    async Task RemoveItem()
+    {
+        if (_selectedItems.Any())
+        {
+            var dialog = await DialogService.ShowAsync<RemoveWeather>("Remove Weather", new DialogOptions { MaxWidth = MaxWidth.Small, FullWidth = true, BackgroundClass = "blurry-dialog" });
+            var result = await dialog.Result;
+
+            if (!result.Canceled)
+            {
+                foreach (var item in _selectedItems)
+                {
+                    forecasts.Remove(item);
+                }
+            }
+        }
+        else
+        {
+            Snackbar.Clear();
+            Snackbar.Configuration.PositionClass = Defaults.Classes.Position.BottomRight;
+            Snackbar.Add("No Items selected to be removed.", Severity.Info, c => c.SnackbarVariant = Variant.Outlined);
+        }
+    }
+    
+    private List<BreadcrumbItem> _items =
+    [
+        new("Home", href: "#", icon: Icons.Material.Filled.Home),
+        new("Weather", href: null, disabled: true)
+    ];
+
+    public class WeatherForecast
     {
         public Guid Id { get; set; }
-        public DateOnly Date { get; set; }
+        public DateTime Date { get; set; }
         public int TemperatureC { get; set; }
         public string? Summary { get; set; }
         public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
