--- a/src/WebClient/Components/_Imports.razor
+++ b/src/WebClient/Components/_Imports.razor
@@ -6,7 +6,11 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Radzen
-@using Radzen.Blazor
+@using MudBlazor
+@using MudBlazor.Extensions
 @using WebClient
 @using WebClient.Components
+@using WebClient.Components.Pages
+@using WebClient.Components.Weather
+@using System.Collections.ObjectModel
+@using System.Diagnostics
