--- a/src/WebClient/Components/Weather/RemoveWeather.razor
+++ b/src/WebClient/Components/Weather/RemoveWeather.razor
@@ -18,9 +18,9 @@
 
 @code {
     [CascadingParameter]
-    private IMudDialogInstance MudDialog { get; set; }
+    private IMudDialogInstance? MudDialog { get; set; }
 
-    private void Cancel() => MudDialog.Cancel();
+    private void Cancel() => MudDialog?.Cancel();
 
     private void Confirm()
     {
@@ -29,6 +29,6 @@
         Snackbar.Clear();
         Snackbar.Configuration.PositionClass = Defaults.Classes.Position.BottomRight;
         Snackbar.Add("Weather Removed Successfully", Severity.Success, c => c.SnackbarVariant = Variant.Outlined);
-        MudDialog.Close(DialogResult.Ok(true));
+        MudDialog?.Close(DialogResult.Ok(true));
     }
 }
