--- a/src/WebClient/Components/Pages/Counter.razor
+++ b/src/WebClient/Components/Pages/Counter.razor
@@ -2,13 +2,7 @@
 
 <PageTitle>Counter</PageTitle>
 
-<MudCard Class="pa-0 ma-4" Elevation="1">
-    <MudBreadcrumbs Items="_items">
-        <SeparatorTemplate>
-            <MudIcon Icon="@Icons.Material.Filled.ArrowForward" Size="Size.Small" />
-        </SeparatorTemplate>
-    </MudBreadcrumbs>  
-</MudCard>
+<Breadcrumb Items="_items" />
 
 <MudCard Class="pa-4 ma-4" Elevation="1">
     <MudCardHeader>
