--- a/src/WebClient/Components/Weather/EditWeather.razor
+++ b/src/WebClient/Components/Weather/EditWeather.razor
@@ -33,7 +33,7 @@
 
     private void OnValidSubmit(EditContext context)
     {
-        // TODO: Send value to Api if needed.
+        // TODO: Send value to Api.
         
         Snackbar.Clear();
         Snackbar.Configuration.PositionClass = Defaults.Classes.Position.BottomRight;
