--- a/src/WebClient/Components/_Imports.razor
+++ b/src/WebClient/Components/_Imports.razor
@@ -8,9 +8,12 @@
 @using Microsoft.JSInterop
 @using MudBlazor
 @using MudBlazor.Extensions
+@using MudBlazor.Services
 @using WebClient
 @using WebClient.Components
 @using WebClient.Components.Pages
 @using WebClient.Components.Weather
 @using System.Collections.ObjectModel
 @using System.Diagnostics
+@using System.Globalization
+@using WebClient.Components.Layout
