--- a/src/WebClient/Components/App.razor
+++ b/src/WebClient/Components/App.razor
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <link rel="stylesheet" href="@Assets["app.css"]" />
-    <link rel="stylesheet" href="@Assets["WebClient.styles.css"]" />
+    @* <link rel="stylesheet" href="@Assets["WebClient.styles.css"]" /> *@
     <ImportMap @rendermode="InteractiveServer" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet @rendermode="InteractiveServer" />
