Remove unused Weather components and update navigation links

--- a/src/WebClient/Components/Layout/MainLayout.razor
+++ b/src/WebClient/Components/Layout/MainLayout.razor
@@ -44,11 +44,7 @@ else
                 <MudNavMenu>
                     <MudNavLink Href="/#" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
                     <MudDivider/>
-                    <MudNavLink Href="/counter" Icon="@Icons.Material.Filled.WatchLater">Counter</MudNavLink>
-                    <MudDivider/>
-                    <MudNavLink Href="/weather" Icon="@Icons.Material.Filled.Cloud">Weather</MudNavLink>
-                    <MudDivider/>
-                    <MudNavLink Href="/organizations" Icon="@Icons.Material.Filled.Cloud">Organizations</MudNavLink>
+                    <MudNavLink Href="/organizations" Icon="@Icons.Material.Filled.List">Organizations</MudNavLink>
                     <MudDivider/>                                        
                 </MudNavMenu>
             </MudPaper>
